--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ aloha-tablet-600px.png
 *.otf
 *.ttf
 aloha-mobile.png
+aloha-desktop-1240px.png
+aloha-desktop-stretch.png
+jquery.bxslider.js
+jquery.bxslider.min.css
+jqueryaloha.js
