--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "homepage": "https://github.com/mahreenq/project-003bestbuy#readme",
   "description": "",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglifycss": "^1.0.9"
   }
 }
